--- a/sass/_dropdown-custom.scss
+++ b/sass/_dropdown-custom.scss
@@ -16,14 +16,28 @@
     }
     .select-dropdown__button {
         padding: 10px 35px 10px 15px;
-        background-color: #fff;
-        color: #616161;
         cursor: pointer;
         width: 210px;
         text-align: left;
         height: 37px;
         border: 1px solid #CDCDCD;
-        border-radius: 8px;
+        background: #FFFFFF;
+        box-shadow: 0 2px 20px 0 rgba(255,255,255,0.40);
+        border-radius: 100px;
+        font-size: 14px;
+        color: #242E42;
+        position: relative;
+
+        &:after {
+            content: "";
+            display: block;
+            position: absolute;
+            width: 10px;
+            height: 6px;
+            background: url(../img/down-arrow-sm.svg);
+            right: 12px;
+            top: 14px;
+        }
     }
     .select-dropdown__button::focus {
         outline: none;
