--- a/sass/_main-nav.scss
+++ b/sass/_main-nav.scss
@@ -1,7 +1,6 @@
 .wps-full-wrapper {
 
    .wps-main-nav{
-        background-color: #192542;
         display: flex;
         padding: 8px 24px;
         justify-content: space-between;
@@ -116,7 +115,7 @@
     
                 a {
                     font-size: 16px;
-                    color: #FFFFFF;
+                    color: #242E42;
                     text-align: left;
                     text-decoration: none;
                     text-transform: uppercase;
@@ -132,7 +131,7 @@
             .wps-user {
                 margin-left: 25px;
                 font-size: 16px;
-                color: #FFFFFF;
+                color: #242E42;
                 font-weight: 500;
 
                 .wps-user-icon {
@@ -164,7 +163,7 @@
 
             .wps-theme .wps-theme-text {
                 display: flex;
-                color: #ffffff;
+                color: #242E42;
                 font-size: 16px;
                 font-weight: 400;
             }
