--- a/sass/_tables.scss
+++ b/sass/_tables.scss
@@ -11,19 +11,21 @@
             justify-content: space-between;
             padding: 12px 0;
             border-bottom: solid 1px #D8D8D8;
+            max-width: 242px;
+            margin: auto;
 
             a {
                 text-decoration: none;
-                font-size: 14px;
+                font-size: 12px;
                 font-weight: 400;
                 color: #168FEB;
             }
         }
 
         .wps-flag {text-decoration: none;
-            padding: 4px 8px;
+            padding: 2px 4px;
             border-radius: 8px;
-            width: 58px;
+            width: 54px;
             display: flex;
             align-items: center;
             justify-content: center;
