--- a/sass/_grid.scss
+++ b/sass/_grid.scss
@@ -53,10 +53,10 @@
             }
 
             &.wps-colBox-title-inner {
-                background-color: #CECECE;
+                background-color: #a1a0bf;
                 font-size: 16px;
                 font-weight: 600;
-                color: #242E42;
+                color: #ffffff;
                 justify-content: space-between;
 
                 .select-dropdown__button {
@@ -174,12 +174,15 @@
             justify-content: center;
             font-size: 14px;
             font-weight: 400;
-            color: #F52D56;
-            border: 1px solid #F52D56;  
+            color: #F52D56; 
             width: 99px;    
             border-bottom-right-radius: 8px;
             border-top-left-radius: 8px;   
             text-decoration: none;   
+
+            img {
+                margin-left: 8px;
+            }
         }
 
         .wps-colBox-cta {
