--- a/sass/_grid.scss
+++ b/sass/_grid.scss
@@ -60,7 +60,7 @@
                 justify-content: space-between;
 
                 .select-dropdown__button {
-                    width: 160px;
+                    width: 130px;
                 }
             }
         }
@@ -164,7 +164,8 @@
             font-weight: 400;
             color: #F52D56;
             border-left: 1px solid #E9E9E9; 
-            padding: 0 37px;           
+            padding: 0 37px;   
+            text-decoration: none;        
         }
 
         .wps-colBox-seeAll {
@@ -237,5 +238,63 @@
                 margin-top: 20px;
             }
         }
+    }
+
+    //DARK THEME
+    &.dark-theme {
+
+        .wps-dashboard-grid {
+
+            .wps-column-box {
+                box-shadow: none;
+                background-image: linear-gradient(132deg, #273036 0%, #1E262A 39%, #030404 100%);
+            }
+
+            .wps-colBox-title-lg {
+                background-image: linear-gradient(180deg, #273036 0%, #121719 100%);
+                //text-shadow: 0 2px 4px rgba(255,255,255,0.40);
+
+                &.wps-colBox-title-inner {
+                    background-image: none;
+                    background-color: transparent;
+                    font-size: 20px;
+                }
+            }
+
+            .nft-dashboard {
+                background-image: linear-gradient(121deg, #FF02B2 0%, #43009C 100%);
+            }
+    
+            .stakings-dashboard {
+                background-image: linear-gradient(122deg, #B294D9 0%, #43009C 100%);
+            }
+    
+            .crowdfundings-dashboard {
+                background-image: linear-gradient(122deg, #05D8F2 0%, #43009C 100%);
+            }
+    
+            .tokens-dashboard {
+                background-image: linear-gradient(122deg, #00E5E3 0%, #43009C 100%);
+            }
+
+            // .wps-colBox-price {
+            //     text-shadow: 0 2px 4px rgba(255,255,255,0.40);
+            // }
+
+            .wps-colBox-bottomInfo {
+                background-image: linear-gradient(180deg, #273036 0%, #121719 100%);
+            }
+
+            .wps-colBox-seeDetails {
+                border-left: 1px solid #000000;
+                color: #00C7C3; 
+            }
+
+            .wps-colBox-seeAll {
+                background-color: #000000;
+                color: #ffffff;
+            }
+        }
+
     }
 }
