--- a/sass/_tables.scss
+++ b/sass/_tables.scss
@@ -142,4 +142,35 @@
             border-bottom: solid 1px #EFF3F9;
         }
     }
+
+    //DARK THEME
+    &.dark-theme {
+
+        .wps-smartContracts-table {
+            padding: 16px 16px;
+        }
+
+        .wps-table {
+
+            .wps-table-row a {
+                color: #00C8E6;
+            }
+
+            .wps-row-text {
+                color: #ffffff;
+            }
+        }
+
+        .wps-real-table th {
+            background-color: #000000;
+            opacity: 0.5;
+            color: #FFFFFF;
+        }
+
+        .wps-real-table td {
+            color: #ffffff;
+            border-bottom: solid 1px #000000;
+        }
+
+    }
 }
