--- a/sass/main.scss
+++ b/sass/main.scss
@@ -73,3 +73,24 @@ body.dark-theme {
     background-color: #242E42;
     margin-bottom: 40px;
 }
+
+//DARK THEME
+.dark-theme {
+
+    .wps-heading1 {
+        color: #ffffff;
+    }
+    
+    .wps-heading2 {
+        color: #ffffff;
+    }
+    
+    .wps-paragraph {
+        color: #ffffff;
+    }
+    
+    .wps-divide-line {
+        background-color: #ffffff;
+    }
+
+}
