--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -12,7 +12,7 @@
         .wps-footer-heading {
             font-size: 20px;
             font-weight: 600;
-            color: #ffffff;
+            color: #f52d56;
         }
 
         .wps-footer-col {
@@ -59,7 +59,7 @@
             .wps-footer-top {
                 display: flex;
                 align-items: flex-start;
-                max-width: 900px;
+                max-width: 1300px;
                 margin: auto;
                 justify-content: space-between;
                 text-align: left;
