--- a/sass/_inner-content.scss
+++ b/sass/_inner-content.scss
@@ -33,7 +33,7 @@
         }
 
         .wps-description-box {
-            background-image: radial-gradient(circle at 1.7% 12%, #DAFFFE 0%, #4BE8E2 43%, #9AA8EC 87%, #F883B8 127%);
+            background-image: radial-gradient(circle at 1.7% 12%,#ffffff 0,#bff7f5 43%,#c7d0fd 87%,#f3c7db 127%);
             box-shadow: 0 0 20px 0 rgba(129,129,130,0.40);
             border-radius: 8px;
             padding: 40px;
