--- a/sass/_tables.scss
+++ b/sass/_tables.scss
@@ -11,8 +11,11 @@
             justify-content: space-between;
             padding: 12px 0;
             border-bottom: solid 1px #D8D8D8;
-            max-width: 242px;
             margin: auto;
+
+            @media (max-width: 991px) {
+                max-width: 260px;
+            }
 
             a {
                 text-decoration: none;
@@ -22,7 +25,8 @@
             }
         }
 
-        .wps-flag {text-decoration: none;
+        .wps-flag {
+            text-decoration: none;
             border-radius: 8px;
             width: 54px;
             display: flex;
@@ -32,6 +36,16 @@
             font-size: 11px;
             font-weight: 600;
             padding: 9px 6px 6px;
+
+            @media (min-width: 1700px) {
+                &:first-child {
+                    margin-right: 28px;
+                }
+    
+                &:last-child {
+                    margin-left: 28px;
+                }
+            }
 
         }
 
