--- a/sass/_grid.scss
+++ b/sass/_grid.scss
@@ -70,6 +70,10 @@
             font-size: 14px;
             font-weight: 400;
             color: #ff017b;
+
+            @media (min-width: 768px) {
+
+            }
         }
     
         .wps-colBox-top {
