--- a/sass/_grid.scss
+++ b/sass/_grid.scss
@@ -72,7 +72,7 @@
             color: #ff017b;
 
             @media (min-width: 768px) {
-
+                display: none;
             }
         }
     
